[project]
name = "abx-dl"
version = "1.10.30"
requires-python = ">=3.11"
description = "All-in-one CLI tool to download and extract content from URLs"
authors = [{name = "Nick Sweeting"}, {name = "ArchiveBox"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["scraping", "crawling", "downloading", "internet archiving", "web archiving", "digipres", "warc", "preservation", "backups", "archiving", "web", "bookmarks", "puppeteer", "browser", "download"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Sociology :: History",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]


dependencies = [
    "rich-click>=1.8.0",
    "rich>=13.0.0",
    "abxbus>=2.4.9",
    "abxpkg>=1.10.5",
    "abx-plugins>=1.10.29",
    "jambo>=0.1.7",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "requests>=2.28.0",
    "psutil>=7.2.1",
]

[dependency-groups]
dev = [
    # TESTING
    "flask>=3.0",
    "pytest>=8.0.0",
    "pytest-httpserver>=1.1.0",
    "pytest-xdist>=3.5.0",
    # LINTING / TYPECHECKING
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "prek>=0.3.6",
    "pyright>=1.1.408",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
# https://github.com/astral-sh/uv/issues/3957

[tool.pdm.build]
includes = ["abx_dl/"]
source-includes = []
excludes = [
    ".DS_Store",
    "**/.DS_Store",
    "tests/",
    "tests/**",
]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["abx_dl"]
exclude = ["*.pyi", "typings/", "migrations/", "vendor/"]

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
ignore = ["E731", "E303", "E266", "E241", "E222"]

[tool.pytest.ini_options]
testpaths = [ "tests", "server/tests" ]

[tool.uv]
exclude-newer = "5 days"
exclude-newer-package = { abx-dl = "1 second", abxpkg = "1 second", abxbus = "1 second", abx-plugins = "1 second" }

[tool.mypy]
mypy_path = "abx_dl,tests,server,abx_dl/typings"
namespace_packages = true
explicit_package_bases = true
# follow_imports = "silent"
# ignore_missing_imports = true
# disallow_incomplete_defs = true
# disallow_untyped_defs = true
# disallow_untyped_decorators = true
# exclude = "tests/.*"
plugins = ["mypy_django_plugin.main"]

[tool.pyright]
include = [
    "abx_dl",
    "tests",
    "server",
]
extraPaths = [
    "abx-plugins",
    "../abx-plugins",
    "abxpkg",
    "../abxpkg",
    "abxbus",
    "../abxbus",
]
exclude = [
    ".venv",
    "**/*.pyi",
    "**/__init__.pyi",
    "**/node_modules",
    "**/__pycache__",
    "**/migrations",
    "abx_dl/vendor",
]
stubPath = "./abx_dl/typings"
venvPath = "."
venv = ".venv"
# ignore = ["src/oldstuff"]
# defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"

[project.scripts]
abx-dl = "abx_dl:main"

[project.urls]
Homepage = "https://github.com/ArchiveBox/abx-dl"
Source = "https://github.com/ArchiveBox/abx-dl"
Documentation = "https://github.com/ArchiveBox/abx-dl"
"Bug Tracker" = "https://github.com/ArchiveBox/abx-dl/issues"
Changelog = "https://github.com/ArchiveBox/abx-dl/releases"
Community = "https://github.com/ArchiveBox/ArchiveBox/wiki/Web-Archiving-Community"
Donate = "https://github.com/ArchiveBox/ArchiveBox/wiki/Donations"
