[project]
name = "abx-dl"
version = "1.11.270"
requires-python = ">=3.12,<3.15"
description = "All-in-one CLI tool to download and extract content from URLs"
authors = [{name = "Nick Sweeting"}, {name = "ArchiveBox"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["scraping", "crawling", "downloading", "internet archiving", "web archiving", "digipres", "warc", "preservation", "backups", "archiving", "web", "bookmarks", "puppeteer", "browser", "download"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Sociology :: History",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]


dependencies = [
    "rich-click>=1.8.0",
    "rich>=13.0.0",
    "abxbus==2.5.40",
    "abxpkg==1.11.292",
    "abx-plugins==1.11.315",
    "jambo>=0.1.7",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "requests>=2.28.0",
    "psutil>=7.2.1",
]

[dependency-groups]
dev = [
    # TESTING
    "flask>=3.0",
    "pytest>=8.3.3,<9",  # pytest-codeblocks 0.17.0 still uses the pre-pytest-9 collect hook signature.
    "pytest-codeblocks>=0.17.0",
    "pytest-github-actions-annotate-failures>=0.4.0",
    "pytest-httpserver>=1.1.0",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.5.0",
    # LINTING / TYPECHECKING
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "pdm-backend>=2.4.0",
    "prek>=0.3.6",
    "pyright>=1.1.408",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
# https://github.com/astral-sh/uv/issues/3957

[tool.pdm.build]
includes = [
    "abx_dl/",
    # Package the same minimal git metadata shape ArchiveBox uses, so
    # abx-dl resolves COMMIT_HASH by reading .git in both dev and installs.
    ".git/HEAD",
    ".git/refs/heads/main",
]
source-includes = [
    # Keep sdists self-contained; pdm_build.py mirrors these files into wheels.
    ".git/HEAD",
    ".git/refs/heads/main",
]
excludes = [
    ".DS_Store",
    "**/.DS_Store",
    ".gitignore",
    "tests/",
    "tests/**",
]

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["abx_dl"]
exclude = ["*.pyi", "typings/", "migrations/", "vendor/"]

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
ignore = ["E731", "E303", "E266", "E241", "E222"]

[tool.pytest.ini_options]
testpaths = [ "tests", "server/tests", "README.md", "AGENTS.md", "CLAUDE.md", "skills" ]
addopts = ["--codeblocks"]
markers = [
    "docker_required: documentation commands that require the current abx-dl Docker image",
]
timeout = 600
timeout_method = "thread"

[tool.uv]
required-version = ">=0.10.0"
exclude-newer = "5 days"
exclude-newer-package = { abx-dl = "2100-01-01T00:00:00Z", abxpkg = "2100-01-01T00:00:00Z", abxbus = "1 second", abx-plugins = "2100-01-01T00:00:00Z" }

[tool.mypy]
mypy_path = "abx_dl,tests,server,abx_dl/typings"
namespace_packages = true
explicit_package_bases = true

[tool.pyright]
include = [
    "abx_dl",
    "tests",
    "server",
]
extraPaths = [
    "abx-plugins",
    "../abx-plugins",
    "abxpkg",
    "../abxpkg",
    "abxbus",
    "../abxbus",
]
exclude = [
    ".venv",
    "**/*.pyi",
    "**/__init__.pyi",
    "**/node_modules",
    "**/__pycache__",
    "**/migrations",
    "abx_dl/vendor",
]
stubPath = "./abx_dl/typings"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Linux"

[project.scripts]
abx-dl = "abx_dl:main"

[project.urls]
Homepage = "https://github.com/ArchiveBox/abx-dl"
Source = "https://github.com/ArchiveBox/abx-dl"
Documentation = "https://github.com/ArchiveBox/abx-dl"
"Bug Tracker" = "https://github.com/ArchiveBox/abx-dl/issues"
Changelog = "https://github.com/ArchiveBox/abx-dl/releases"
Community = "https://github.com/ArchiveBox/ArchiveBox/wiki/Web-Archiving-Community"
Donate = "https://github.com/ArchiveBox/ArchiveBox/wiki/Donations"
